color and more things

--- a/imgui.ini
+++ b/imgui.ini
@@ -112,3 +112,28 @@ Pos=342,0
 Size=1027,624
 Collapsed=0
 
+[Window][2022-5]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][90s]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][2022-3]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][2016]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][2019]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
