--- a/imgui.ini
+++ b/imgui.ini
@@ -38,7 +38,6 @@ Size=1370,124
 Collapsed=0
 
 [Window][Track Player]
-Pos=0,0
 Size=1370,749
 Collapsed=0
 
@@ -138,6 +137,16 @@ Size=1027,624
 Collapsed=0
 
 [Window][2017]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][##track-player]
+Pos=0,0
+Size=1370,749
+Collapsed=0
+
+[Window][00s1]
 Pos=342,0
 Size=1027,624
 Collapsed=0
