able to play next song

--- a/imgui.ini
+++ b/imgui.ini
@@ -52,13 +52,13 @@ Size=1024,157
 Collapsed=0
 
 [Window][##bottom]
-Pos=0,624
-Size=1370,124
+Pos=0,620
+Size=1366,124
 Collapsed=0
 
 [Window][##top-left]
 Pos=0,0
-Size=342,624
+Size=341,620
 Collapsed=0
 
 [Window][##top-right]
@@ -67,8 +67,8 @@ Size=1027,624
 Collapsed=0
 
 [Window][All Songs]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][beste]
@@ -117,13 +117,13 @@ Size=1027,624
 Collapsed=0
 
 [Window][90s]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][2022-3]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][2016]
@@ -132,13 +132,13 @@ Size=1027,624
 Collapsed=0
 
 [Window][2019]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][2017]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][##track-player]
@@ -149,5 +149,30 @@ Collapsed=0
 [Window][00s1]
 Pos=342,0
 Size=1027,624
+Collapsed=0
+
+[Window][04/06]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][00classics-love-tracks]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][00s]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][2018]
+Pos=342,0
+Size=1027,624
+Collapsed=0
+
+[Window][akon]
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
