--- a/imgui.ini
+++ b/imgui.ini
@@ -52,13 +52,13 @@ Size=1024,157
 Collapsed=0
 
 [Window][##bottom]
-Pos=0,624
-Size=1370,124
+Pos=0,620
+Size=1366,124
 Collapsed=0
 
 [Window][##top-left]
 Pos=0,0
-Size=342,624
+Size=341,620
 Collapsed=0
 
 [Window][##top-right]
@@ -172,6 +172,11 @@ Size=1027,624
 Collapsed=0
 
 [Window][akon]
+Pos=341,0
+Size=1024,620
+Collapsed=0
+
+[Window][##right-panel-header]
 Pos=341,0
 Size=1024,620
 Collapsed=0
