--- a/imgui.ini
+++ b/imgui.ini
@@ -57,14 +57,13 @@ Size=1370,124
 Collapsed=0
 
 [Window][##top-left]
-Pos=0,0
-Size=342,624
+Size=341,620
 Collapsed=0
 
 [Window][##top-right]
 Pos=342,0
 Size=1027,624
-Collapsed=0
+Collapsed=1
 
 [Window][All Songs]
 Pos=342,0
@@ -179,5 +178,20 @@ Collapsed=0
 [Window][##right-panel-header]
 Pos=342,0
 Size=1027,624
+Collapsed=0
+
+[Window][Audio Visualizer]
+Pos=0,0
+Size=900,600
+Collapsed=0
+
+[Window][Visualizer Controls]
+Pos=400,59
+Size=376,560
+Collapsed=0
+
+[Window][Wave Visualizer]
+Pos=60,60
+Size=900,600
 Collapsed=0
 
