--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
-Size=400,400
+Pos=67,180
+Size=400,418
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -52,13 +52,13 @@ Size=1024,157
 Collapsed=0
 
 [Window][##bottom]
-Pos=0,624
-Size=1370,124
+Pos=0,620
+Size=1366,124
 Collapsed=0
 
 [Window][##top-left]
 Pos=0,0
-Size=342,624
+Size=341,620
 Collapsed=0
 
 [Window][##top-right]
@@ -176,8 +176,8 @@ Size=1024,620
 Collapsed=0
 
 [Window][##right-panel-header]
-Pos=342,0
-Size=1027,624
+Pos=341,0
+Size=1024,620
 Collapsed=0
 
 [Window][Audio Visualizer]
@@ -192,5 +192,9 @@ Collapsed=0
 [Window][Wave Visualizer]
 Pos=60,60
 Size=900,600
+Collapsed=0
+
+[Window][Visualizer]
+Size=341,620
 Collapsed=0
 
